--- a/SampleCode/LabelingUX/.gitignore
+++ b/SampleCode/LabelingUX/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # data for labeling
-/Server/data
+/Server/data/*
+
+!Server/data/.gitkeep
 
 # dependencies
 /node_modules
